infrastructure/policy/gatekeeper/constraints/enforce-container-security-staging.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerSecurity
metadata:
  name: enforce-container-security-staging
spec:
  match:
    namespaces: [staging]
