infrastructure/policy/gatekeeper/constraints/enforce-container-security.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerSecurity
metadata:
  name: enforce-container-security
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment","StatefulSet","DaemonSet"]
