infrastructure/policy/gatekeeper/constraints/require-resource-requests-staging.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sResourceLimits
metadata:
  name: require-resource-requests-staging
spec:
  match:
    namespaces: [staging]
