infrastructure/policy/gatekeeper/constraints/require-resource-requests.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sResourceLimits
metadata:
  name: require-resource-requests
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment","StatefulSet","DaemonSet"]
